; ModuleID = '/home/carl/AnghaBench/i3/src/extr_window.c_window_update_transient_for.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_window.c_window_update_transient_for.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [41 x i8] c"TRANSIENT_FOR not set on window 0x%08x.\0A\00", align 1
@XCB_NONE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [49 x i8] c"Transient for changed to 0x%08x (window 0x%08x)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @window_update_transient_for(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = call i64 @xcb_get_property_value_length(i32* %9)
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %8, %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 (i8*, i32, ...) @DLOG(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* @XCB_NONE, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @FREE(i32* %20)
  br label %40

22:                                               ; preds = %8
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @xcb_icccm_get_wm_transient_for_from_reply(i32* %5, i32* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %22
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @free(i32* %27)
  br label %40

29:                                               ; preds = %22
  %30 = load i32, i32* %5, align 4
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 (i8*, i32, ...) @DLOG(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i32 %30, i32 %33)
  %35 = load i32, i32* %5, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 4
  %38 = load i32*, i32** %4, align 8
  %39 = call i32 @free(i32* %38)
  br label %40

40:                                               ; preds = %29, %26, %12
  ret void
}

declare dso_local i64 @xcb_get_property_value_length(i32*) #1

declare dso_local i32 @DLOG(i8*, i32, ...) #1

declare dso_local i32 @FREE(i32*) #1

declare dso_local i32 @xcb_icccm_get_wm_transient_for_from_reply(i32*, i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
